Edited everything, yet discord still broken

--- a/package.json
+++ b/package.json
@@ -1,18 +1,106 @@
 {
-  "name": "nodejs",
+  "name": "chatbot-discord",
   "version": "1.0.0",
-  "description": "",
+  "description": "Yes, you heard that right — no payment, no credit card needed, and you don’t have to pay a single dime!",
   "main": "index.js",
+  "dependencies": {
+    "accepts": "^1.3.8",
+    "agent-base": "^7.1.0",
+    "array-flatten": "^1.1.1",
+    "body-parser": "^1.20.1",
+    "busboy": "^1.6.0",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.2",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.4.1",
+    "cookie-parser": "^1.4.6",
+    "cookie-signature": "^1.0.6",
+    "data-uri-to-buffer": "^4.0.0",
+    "debug": "^4.3.4",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "discord-api-types": "^0.37.50",
+    "discord.js": "^14.13.0",
+    "domino": "^2.1.6",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^1.0.2",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "express": "^4.18.2",
+    "fast-deep-equal": "^3.1.3",
+    "fetch-blob": "^3.1.5",
+    "finalhandler": "^1.2.0",
+    "formdata-polyfill": "^4.0.10",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "function-bind": "^1.1.1",
+    "get-intrinsic": "^1.2.1",
+    "has": "^1.0.3",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "http-errors": "^2.0.0",
+    "https-proxy-agent": "^7.0.1",
+    "iconv-lite": "^0.4.24",
+    "ifw": "^0.0.2",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "lodash": "^4.17.21",
+    "lodash.snakecase": "^4.1.1",
+    "magic-bytes.js": "^1.0.15",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "ms": "^2.1.2",
+    "negotiator": "^0.6.3",
+    "node-domexception": "^1.0.0",
+    "node-fetch": "^3.3.0",
+    "object-inspect": "^1.12.3",
+    "on-finished": "^2.4.1",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "proxy-addr": "^2.0.7",
+    "qs": "^6.11.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "semiver": "^1.1.0",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.4",
+    "statuses": "^2.0.1",
+    "streamsearch": "^1.1.0",
+    "toidentifier": "^1.0.1",
+    "ts-mixer": "^6.0.3",
+    "tslib": "^2.6.1",
+    "type-is": "^1.6.18",
+    "undici": "^5.23.0",
+    "unpipe": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "weaigc-turndown": "^7.1.4",
+    "web-streams-polyfill": "^3.2.1",
+    "ws": "^8.13.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/revx0012/Chatbot-Discord.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@types/node": "^18.0.6",
-    "discord.js": "^14.13.0",
-    "gradio-chatbot": "^0.0.15",
-    "node-fetch": "^3.2.6"
-  }
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/revx0012/Chatbot-Discord/issues"
+  },
+  "homepage": "https://github.com/revx0012/Chatbot-Discord#readme"
 }
